OCP/security-group.tf
resource "aws_security_group" "allow_HTTP-SSH" {
  name        = "allow_allow_HTTP-SSH"
  description = "Allow HTTP-SSH inbound traffic"
  vpc_id      = aws_vpc.prod-ocp-vpc.id

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_HTTP_SSH"
  }
}
